# Flappy_Bird_SDL2

./: Flappy Bird.sln  README.md
Flappy Bird/: test_result.txt
Flappy Bird/Game_Text/: choice_menu_tutorial.txt
Flappy Bird/asset/grumpy_bird/: New Text Document.txt
Flappy Bird/src/: Bird.cpp  Bird.h  ChoiceMenu.cpp  ChoiceMenu.h  CommonFunction.cpp  CommonFunction.h  Game.cpp  Game.h  Instruct.cpp  Instruct.h  MainMenu.cpp  MainMenu.h  Pipe.cpp  Restart.cpp  Restart.h  State.cpp  State.h  config.h  main.cpp
Flappy_Bird/: CMakeLists.txt  build.bat  test_result.txt
Flappy_Bird/Game_Text/: tutorial_1.txt  tutorial_2.txt  tutorial_3.txt  tutorial_4.txt
Flappy_Bird/src/: ChoiceMenu.cpp  CommonFunction.cpp  Game.cpp  Game.h  Instruct.cpp  Instruct.h  MainMenu.cpp  MainMenu.h  Restart.cpp  Restart.h  State.cpp  State.h  config.h  main.cpp
